# selprotopy

./: .buildinfo  .flake8  .gitignore  LICENSE  README.md  SelClient.html  commands.html  common.html  examples.html  exceptions.html  genindex.html  index.html  objects.inv  protoparser.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  selprotopy.html  setup.py  sitemap.xml  telnetlib_support.html  test.py
_sources/: examples.md.txt  index.md.txt  index.rst.txt  selprotopy.md.txt
_static/: classic.css
api/: selprotopy.SelClient.html  selprotopy.commands.event_record_request.html  selprotopy.commands.html  selprotopy.commands.prepare_fastop_command.html  selprotopy.common.eval_checksum.html  selprotopy.common.html  selprotopy.common.ieee4bytefps.html  selprotopy.common.int_to_bool_list.html  selprotopy.exceptions.html  selprotopy.protoparser.CleanPrompt.html  selprotopy.protoparser.FastMeterBlock.html  selprotopy.protoparser.FastMeterConfigurationBlock.html  selprotopy.protoparser.FastOpConfigurationBlock.html  selprotopy.protoparser.RelayBnaBlock.html  selprotopy.protoparser.RelayDefinitionBlock.html  selprotopy.protoparser.RelayDnaBlock.html  selprotopy.protoparser.RelayIdBlock.html  selprotopy.protoparser.html  selprotopy.telnetlib_support.html  selprotopy.telnetlib_support.process_rawq.html
client_examples/: simple_autoconfiguration.html
docsource/: SELClient.rst  commands.rst  common.rst  conf.py  examples.md  exceptions.rst  index.md  requirements.txt  selprotopy.rst  sphinxrequires.txt  telnetlib_support.rst
selprotopy/: __init__.py  (+8 more)
(+55 files in other folders)
