[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "selprotopy"
description = "Schweitzer Engineering Laboratories (SEL) Protocol Bindings in Python"
authors = [{name = "Joe Stanley", email = "engineerjoe440@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Home = "https://selprotopy.readthedocs.io/en/latest/"
Repository = "https://github.com/engineerjoe440/selprotopy/"
PyPI = "https://pypi.org/project/selprotopy/"
Issues = "https://github.com/engineerjoe440/selprotopy/issues"
